ryx-音效与爆炸特效添加